...
    cancel: {
        id: 'mobile.post.cancel',
        defaultMessage: 'Cancel',
    },
    close: {
        id: 'channel_info.close',
        defaultMessage: 'Close',
    },
    leave: {
        id: 'channel_info.leave',
        defaultMessage: 'Leave',
    },
});
...
