...

        // @ts-expect-error context type definition
        const {formatMessage} = this.context.intl;
        const {actions, dataSource, options, placeholder, getDynamicOptions, theme} = this.props;
        const screen = 'SelectorScreen';
        const title = placeholder || formatMessage({id: 'mobile.action_menu.select', defaultMessage: 'Select an option'});
        const buttonName = formatMessage({id: 'mobile.forms.select.done', defaultMessage: 'Done'});

        actions.setAutocompleteSelector(dataSource, this.handleSelect, options, getDynamicOptions);
        let screenOptions = {};
        if (this.props.isMultiselect) {
            screenOptions = {
                topBar: {
...
