...
            <View style={styles.buttonContainer}>
                <Button
                    onPress={handleCopy}
                    emphasis='tertiary'
                    iconName='content-copy'
                    theme={theme}
                    text={intl.formatMessage({id: 'report_a_problem.metadata.copy', defaultMessage: 'Copy'})}
                    testID='report_problem.metadata.copy.button'
                />
            </View>
        </View>
    );
};
...
